--- a/cpp/string/strings.vcxproj.filters
+++ b/cpp/string/strings.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="strings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
